<resources>
    <string name="app_name">Cms</string>
    <string name="enter_admin_id">enter admin id</string>
    <string name="signin">signin</string>
    <string name="textview76">TextView</string>
    <string name="enter_name">enter name</string>
    <string name="enter_rno">enter rno</string>
    <string name="admin">admin</string>
    <string name="for_finding_company">for finding company</string>
    <string name="for_finding_student">for finding student</string>
    <string name="find_student">find student</string>
    <string name="find_company">find company</string>
    <string name="data_will_be_display_here">data will be display here</string>
    <string name="student_s_data">student\'s data</string>
    <string name="company_s_data">company\'s data</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="for_student_deletion">for student deletion</string>
    <string name="for_company_deletion">for company deletion</string>
    <string name="enter_rno1">enter rno</string>
    <string name="enter_name1">enter name</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="delete_student">delete student</string>
    <string name="delete_company">delete company</string>
    <string name="for_finding_student1">for finding student</string>
    <string name="company33">company</string>
    <string name="button5">Button</string>
    <string name="java_virtual_machine">java virtual machine</string>
    <string name="what_is_full_form_of_jvm">what is full form of jvm</string>
    <string name="checkbox11">CheckBox</string>
    <string name="checkbox12">CheckBox</string>
    <string name="checkbox13">CheckBox</string>
    <string name="checkbox14">CheckBox</string>
    <string name="textview15">TextView</string>
    <string name="checkbox16">CheckBox</string>
    <string name="checkbox17">CheckBox</string>
    <string name="checkbox18">CheckBox</string>
    <string name="checkbox">CheckBox</string>
    <string name="java_version_machine">java version machine</string>
    <string name="java_vary_machine">java vary machine</string>
    <string name="java_vertical_machine77">java vertical machine</string>
    <string name="which_class_is_use_to_go_one_activity_to_another">which class is use to go one activity to another</string>
    <string name="button88">Button</string>
    <string name="newact97">newAct</string>
    <string name="intent56">Intent</string>
    <string name="view55">view</string>
    <string name="what_is_the_method_of_setonclicklistener">what is the method of setonclicklistener</string>
    <string name="onclick2">onclick</string>
    <string name="onclick3">onclick</string>
    <string name="setclick">setclick</string>
    <string name="getclick">getclick</string>
    <string name="inclick">inclick</string>
    <string name="student92">student</string>
    <string name="profile">profile</string>
    <string name="button7">Button</string>
    <string name="methodonclick55">methodonclick</string>
    <string name="methodsetclick44">methodsetclick</string>
    <string name="methodgetclick65">methodgetclick</string>
    <string name="methodinclick43">methodinclick</string>
    <string name="button99">Button</string>
    <string name="send">send</string>
    <string name="name">name</string>
    <string name="branch">branch</string>
    <string name="marks">marks</string>
    <string name="button66">Button</string>
    <string name="rollno">rollno</string>
    <string name="enter_rno54">enter rno</string>
    <string name="enter_name43">enter name</string>
    <string name="enter_branch">enter branch</string>
    <string name="enter_marks">enter marks</string>
    <string name="save">save</string>
    <string name="give_test">give test</string>
    <string name="submit">submit</string>
    <string name="textview34">TextView</string>
    <string name="textview90">TextView</string>
    <string name="intent">Intent</string>
    <string name="button">Button</string>
    <string name="newact">newAct</string>
    <string name="view">view</string>
    <string name="methodsetclick">methodsetclick</string>
    <string name="methodonclick">methodonclick</string>
    <string name="methodgetclick">methodgetclick</string>
    <string name="methodinclick">methodinclick</string>
    <string name="java_vertical_machine34">java vertical machine</string>
    <string name="java_vertical_machine98">java vertical machine</string>
    <string name="update_profile">update profile</string>
    <string name="student11">student</string>
    <string name="enter_rno_for_mks_update">enter rno for mks update</string>
    <string name="update">update</string>
    <string name="enter_the_mks_for_update">enter the mks for update</string>
    <string name="java_vertical_machine">java vertical machine</string>
    <string name="java_version_machine1">java version machine1</string>
    <string name="java_vertical_machine2">java vertical machine2</string>
    <string name="_1_what_is_full_form_of_jvm">1.what is full form of jvm</string>
    <string name="company">company</string>
    <string name="student22">student</string>
    <string name="student33">student</string>
</resources>
